Removed security for switch bootstraps
